--- a/doc/trex_rpc_server_spec.asciidoc
+++ b/doc/trex_rpc_server_spec.asciidoc
@@ -50,6 +50,10 @@ include::trex_ga.asciidoc[]
 | 1.9    | Egor Blagov (eblagov)
 |
 - add stack name in `get_system_info`
+| 1.10   | Egor Blagov (eblagov)
+|
+- update VM instructions 
+
 
 |=================
 
@@ -1347,6 +1351,19 @@ Fix TCP/UDP and IPv4 headers using hardware assit engine
 | Field       | Type        | Description
 | type        | string      | ''fix_checksum_ipv4''
 | pkt_offset  | uint16      | offset of the field to fix 
+|=================
+
+===== fix_checksum_icmpv6
+
+Fix ICMPv6 layer checksum on top of IPv6 using software
+
+.Object type 'vm - fix_checksum_icmpv6'
+[options="header",cols="1,1,3"]
+|=================
+| Field       | Type        | Description
+| type        | string      | ''fix_checksum_icmpv6''
+| l2_len      | uint16      | len of L2 (e.g. 22 Ether + Dot1Q + Dot1Q)
+| l3_len      | uint16      | len of l3 header (e.g. 40 for IPv6)
 |=================
 
 ===== flow_var
